tests/invalid/fp_dup_bug.err_exp3
fp_dup_bug.m:069: Error: [38;5;203mduplicate C# foreign_proc[39;49m for this mode of predicate
fp_dup_bug.m:069:   `foo'/2.
fp_dup_bug.m:063:   The first one was here.
fp_dup_bug.m:075: Error: [38;5;203mduplicate C# foreign_proc[39;49m for this mode of predicate
fp_dup_bug.m:075:   `foo'/2.
fp_dup_bug.m:063:   The first one was here.
